force-app/main/default/objects/JurosDescontoAntecipao__c/JurosDescontoAntecipao__c.object-meta.xml
<CustomObject>
    <label>Lista de Preço</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Lista de Preço</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listas de Preço</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>