force-app/main/default/objects/JurosDescontoAntecipao__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cliente</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Listas de Preço</relationshipLabel>
    <relationshipName>Listas_de_Preco</relationshipName>
    <type>Lookup</type>
</CustomField>