force-app/main/default/objects/JurosDescontoAntecipao__c/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>Grupo de Cliente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>