force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ActivitySector__c.field-meta.xml
<CustomField>
    <fullName>ActivitySector__c</fullName>
    <label>Setor de Atividade</label>
    <length>100</length>
    <type>Text</type>
</CustomField>