force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ClientGroup__c.field-meta.xml
<CustomField>
    <fullName>ClientGroup__c</fullName>
    <label>Grupo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>GrupoCliente</valueSetName>
    </valueSet>
</CustomField>