force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ConditionNumberRegister__c.field-meta.xml
<CustomField>
    <fullName>ConditionNumberRegister__c</fullName>
    <label>Número de registro de Condição</label>
    <length>10</length>
    <type>Text</type>
</CustomField>