force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ConditionType__c.field-meta.xml
<CustomField>
    <fullName>ConditionType__c</fullName>
    <label>Tipo da Condição(Juros e Desconto)</label>
    <length>180</length>
    <type>Text</type>
</CustomField>