force-app/main/default/objects/JurosDescontoAntecipao__c/fields/Cost__c.field-meta.xml
<CustomField>
    <fullName>Cost__c</fullName>
    <label>Custo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>