force-app/main/default/objects/JurosDescontoAntecipao__c/fields/Culture__c.field-meta.xml
<CustomField>
    <fullName>Culture__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cultura</label>
    <referenceTo>Cultura__c</referenceTo>
    <relationshipLabel>Juros e Descontos Antecipação</relationshipLabel>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>