force-app/main/default/objects/JurosDescontoAntecipao__c/fields/DescriptionExternalId__c.field-meta.xml
<CustomField>
    <fullName>DescriptionExternalId__c</fullName>
    <formula>TEXT(StartDate__c)+'_'+
        IF(ISBLANK(SalesOrg__c ), &apos;&apos;, SalesOrg__c+&apos;_&apos;)+
IF(ISBLANK(harvest__c ), &apos;&apos;, harvest__c +&apos;_&apos;)+
IF(ISBLANK(TEXT(Currency__c)), &apos;&apos;, TEXT(Currency__c)+&apos;_&apos;)+
IF(ISBLANK( SalesCondition__c ), &apos;&apos;,  SalesCondition__c +&apos;_&apos;)+
IF(ISBLANK( ProductGroup__c ), &apos;&apos;,  ProductGroup__c +&apos;_&apos;)+
IF(ISBLANK( SalesOffice__c ), &apos;&apos;, SalesOffice__c +&apos;_&apos;)+
IF(ISBLANK( Culture__c ), &apos;&apos;,  Culture__c +&apos;_&apos;)+
IF(ISPICKVAL(ClientGroup__c, "" ), '', TEXT(ClientGroup__c) +'_')+
IF(ISBLANK(Account__c  ), &apos;&apos;,  Account__c +&apos;_&apos;)+
IF(ISBLANK(SalesTeam__c ), &apos;&apos;, SalesTeam__c +&apos;_&apos;)+
IF(ISBLANK(Product__c ), &apos;&apos;, Product__c+&apos;_&apos;)+
IF(ISBLANK(RecordTypeId ), &apos;&apos;, RecordTypeId)</formula>
    <label>Descrição Externald</label>
    <type>Text</type>
</CustomField>