force-app/main/default/objects/JurosDescontoAntecipao__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Centro de Distribuição</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Juros e Descontos Antecipação</relationshipLabel>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <type>Lookup</type>
</CustomField>