force-app/main/default/objects/JurosDescontoAntecipao__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Data de Pagamento</label>
    <type>Date</type>
</CustomField>