force-app/main/default/objects/JurosDescontoAntecipao__c/fields/PriorityLevel__c.field-meta.xml
<CustomField>
    <fullName>PriorityLevel__c</fullName>
    <label>Nível de Prioridade</label>
    <length>180</length>
    <type>Text</type>
</CustomField>