force-app/main/default/objects/JurosDescontoAntecipao__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <type>Lookup</type>
</CustomField>