force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE( TRIM( SUBSTITUTE( Product__r.ProductCode &amp; &quot;!&quot; , &quot;0&quot;, &quot; &quot;)), &quot; &quot;, &quot;0&quot;), &quot;!&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código do Produto</label>
    <type>Text</type>
</CustomField>