force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Grupo de Produto</label>
    <referenceTo>ProductGroup__c</referenceTo>
    <relationshipLabel>Juros e Descontos Antecipação</relationshipLabel>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>