force-app/main/default/objects/JurosDescontoAntecipao__c/fields/ProductMultiplier__c.field-meta.xml
<CustomField>
    <fullName>ProductMultiplier__c</fullName>
    <label>Multiplicidade do Produto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>