force-app/main/default/objects/JurosDescontoAntecipao__c/fields/SalesCondition__c.field-meta.xml
<CustomField>
    <fullName>SalesCondition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Condição de Vendas</label>
    <referenceTo>SalesCondition__c</referenceTo>
    <relationshipLabel>Listas de Preço</relationshipLabel>
    <relationshipName>Listas_de_Preco</relationshipName>
    <type>Lookup</type>
</CustomField>