force-app/main/default/objects/JurosDescontoAntecipao__c/fields/SalesOffice__c.field-meta.xml
<CustomField>
    <fullName>SalesOffice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Escritório de Vendas</label>
    <referenceTo>SalesOffice__c</referenceTo>
    <relationshipLabel>Juros e Descontos Antecipação</relationshipLabel>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>