force-app/main/default/objects/JurosDescontoAntecipao__c/fields/SalesOrg__c.field-meta.xml
<CustomField>
    <fullName>SalesOrg__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Organização de Venda</label>
    <referenceTo>SalesOrg__c</referenceTo>
    <relationshipLabel>Listas de Preço</relationshipLabel>
    <relationshipName>Juros_e_Descontos_Antecipa_o</relationshipName>
    <type>Lookup</type>
</CustomField>