force-app/main/default/objects/JurosDescontoAntecipao__c/fields/UnitMeasurement__c.field-meta.xml
<CustomField>
    <fullName>UnitMeasurement__c</fullName>
    <label>Unidade de medida</label>
    <length>3</length>
    <type>Text</type>
</CustomField>