force-app/main/default/objects/JurosDescontoAntecipao__c/recordTypes/ZDAN.recordType-meta.xml
<RecordType>
    <fullName>ZDAN</fullName>
    <active>true</active>
    <label>Desconto</label>
</RecordType>