force-app/main/default/objects/JurosDescontoAntecipao__c/recordTypes/ZJUR.recordType-meta.xml
<RecordType>
    <fullName>ZJUR</fullName>
    <active>true</active>
    <label>Juros</label>
</RecordType>