force-app/main/default/objects/JurosDescontoAntecipao__c/recordTypes/ZPR0.recordType-meta.xml
<RecordType>
    <fullName>ZPR0</fullName>
    <active>true</active>
    <label>Preço</label>
</RecordType>