force-app/main/default/objects/JurosDescontoAntecipao__c/recordTypes/ZROY.recordType-meta.xml
<RecordType>
    <fullName>ZROY</fullName>
    <active>true</active>
    <label>Royalties</label>
</RecordType>