force-app/main/default/objects/JurosDescontoAntecipao__c/recordTypes/ZTRA.recordType-meta.xml
<RecordType>
    <fullName>ZTRA</fullName>
    <active>true</active>
    <label>TSI</label>
</RecordType>