force-app/main/default/objects/JurosDescontoAntecipao__c/listViews/TSICondition.listView-meta.xml
<ListView>
    <fullName>TSICondition</fullName>
    <columns>NAME</columns>
    <columns>Product__c</columns>
    <columns>SalesOrg__c</columns>
    <columns>SalesOffice__c</columns>
    <columns>SalesTeam__c</columns>
    <columns>harvest__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>JurosDescontoAntecipao__c.ZTRA</value>
    </filters>
    <label>Condição de TSI</label>
</ListView>